--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     enabled: false,
                     iterations: 1000,
                     updateInterval: 100,
-                    onlyDynamicEdges: false,
+                    onlyDynamicEdges: true,
                     fit: true
                 },
                 solver: 'forceAtlas2Based',
@@ -142,6 +142,7 @@
                     damping: 0.4,
                     avoidOverlap: 100
                 },
+                minVelocity: 50
             },
             groups: {
               male: {
@@ -206,6 +207,9 @@ jsnx.draw(G, {
 });
   })
   
+</script>
+<script>
+  javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
 </script>
 </body>
 </html>
